Anonymous | Login | 2021-04-20 18:47 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0032276 | Open CASCADE | [OCCT] OCCT:Coding | public | 2021-04-02 12:02 | 2021-04-03 12:50 | ||||||||
Reporter | kgv | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | trivial | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.5.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0032276: Coding Rules - replace IntTools_CArray1OfReal by NCollection_Array1 | ||||||||||||
Description | IntTools_CArray1OfInteger / IntTools_CArray1OfReal classes can be replaced by NCollection_Array1. | ||||||||||||
Steps To Reproduce | N/A | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not required | ||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0099986) git (administrator) 2021-04-02 12:59 |
Branch CR32276 has been created by kgv. SHA-1: 72b0b6e2e5de2205c6ba7f88c50a169846b9b02f Detailed log of new commits: Author: kgv Date: Fri Apr 2 12:35:23 2021 +0300 0032276: Coding Rules - replace IntTools_CArray1OfReal by NCollection_Array1 |
(0099991) git (administrator) 2021-04-02 14:17 |
Branch CR32276 has been updated forcibly by kgv. SHA-1: 39344ca50c7ba79dfbf96884f2f0e75f10982bde |
(0099995) kgv (developer) 2021-04-02 14:44 |
Please raise the patch - OCCT: branch CR32276. |
(0100026) bugmaster (administrator) 2021-04-03 11:57 |
Combination - OCCT branch : IR-2021-04-02 master SHA - 5e4f263d1cfd948e6a91aa584919bb6d86256a86 a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-04-02 SHA - 7cc5f9bb4eb61152ffc5290516ae20c649a33a55 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18055.90000000045 / 18179.810000000525 [-0.68%] Products Total CPU difference: 11506.800000000105 / 11565.220000000114 [-0.51%] Windows-64-VC14: OCCT Total CPU difference: 19512.09375 / 19430.5 [+0.42%] Products Total CPU difference: 12943.234375 / 12843.765625 [+0.77%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0100066) git (administrator) 2021-04-03 12:50 |
Branch CR32276 has been deleted by inv. SHA-1: 39344ca50c7ba79dfbf96884f2f0e75f10982bde |
![]() |
|||
occt: master ae64fe01
Timestamp: 2021-04-02 09:35:23 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0032276: Coding Rules - replace IntTools_CArray1OfReal by NCollection_Array1 IntTools_CArray1OfReal has been replaced by TColStd_Array1OfReal. IntTools_CArray1OfInteger has been removed (unused). |
||
mod - src/IntTools/FILES | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools.cxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools.hxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_BaseRangeSample.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_BaseRangeSample.lxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CArray1.gxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CArray1.lxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CArray1OfInteger.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CArray1OfInteger_0.cxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_CArray1OfReal.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CArray1OfReal_0.cxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_CurveRangeLocalizeData.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CurveRangeLocalizeData.lxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_CurveRangeSample.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CurveRangeSample.lxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_CurveRangeSampleMapHasher.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_CurveRangeSampleMapHasher.lxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_EdgeFace.cxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_MarkedRangeSet.cxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_MarkedRangeSet.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_MarkedRangeSet.lxx | [ Diff ] [ File ] | ||
mod - src/IntTools/IntTools_SurfaceRangeSampleMapHasher.hxx | [ Diff ] [ File ] | ||
rm - src/IntTools/IntTools_SurfaceRangeSampleMapHasher.lxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2021-04-02 12:02 | kgv | New Issue | |
2021-04-02 12:02 | kgv | Assigned To | => kgv |
2021-04-02 12:52 | kgv | Summary | Coding Rules - replace IntTools_CArray1OfInteger by NCollection_Array1 => Coding Rules - replace IntTools_CArray1OfReal by NCollection_Array1 |
2021-04-02 12:59 | git | Note Added: 0099986 | |
2021-04-02 14:17 | git | Note Added: 0099991 | |
2021-04-02 14:44 | kgv | Note Added: 0099995 | |
2021-04-02 14:44 | kgv | Assigned To | kgv => bugmaster |
2021-04-02 14:44 | kgv | Status | new => resolved |
2021-04-02 14:44 | kgv | Status | resolved => reviewed |
2021-04-03 11:57 | bugmaster | Note Added: 0100026 | |
2021-04-03 11:57 | bugmaster | Status | reviewed => tested |
2021-04-03 12:06 | bugmaster | Test case number | => Not required |
2021-04-03 12:13 | bugmaster | Changeset attached | => occt master ae64fe01 |
2021-04-03 12:13 | bugmaster | Status | tested => verified |
2021-04-03 12:13 | bugmaster | Resolution | open => fixed |
2021-04-03 12:50 | git | Note Added: 0100066 |
Copyright © 2000 - 2021 MantisBT Team |