src/IntTools/IntTools_BaseRangeSample.hxx
@@ -19,9 +19,7 @@
 #include <Standard.hxx>
 #include <Standard_DefineAlloc.hxx>
 #include <Standard_Handle.hxx>
-
 #include <Standard_Integer.hxx>
-
 
 //! base class for range index management
 class IntTools_BaseRangeSample 
@@ -30,38 +28,18 @@ public:
 
   DEFINE_STANDARD_ALLOC
 
-  
   Standard_EXPORT IntTools_BaseRangeSample();
-  
+
   Standard_EXPORT IntTools_BaseRangeSample(const Standard_Integer theDepth);
-  
-    void SetDepth (const Standard_Integer theDepth);
-  
-    Standard_Integer GetDepth() const;
 
+  void SetDepth (const Standard_Integer theDepth) { myDepth = theDepth; }
 
-
-
-protected:
-
-
-
-
+  Standard_Integer GetDepth() const { return myDepth; }
 
 private:
 
-
-
   Standard_Integer myDepth;
 
-
 };
-
-
-#include <IntTools_BaseRangeSample.lxx>
-
-
-
-
 
 #endif // _IntTools_BaseRangeSample_HeaderFile
