src/IntTools/IntTools_CurveRangeLocalizeData.hxx
@@ -19,17 +19,13 @@
 #include <Standard.hxx>
 #include <Standard_DefineAlloc.hxx>
 #include <Standard_Handle.hxx>
-
-#include <Standard_Integer.hxx>
 #include <Standard_Real.hxx>
 #include <IntTools_MapOfCurveSample.hxx>
 #include <IntTools_DataMapOfCurveSampleBox.hxx>
-#include <Standard_Boolean.hxx>
 #include <IntTools_ListOfCurveRangeSample.hxx>
+
 class IntTools_CurveRangeSample;
 class Bnd_Box;
-
-
 
 class IntTools_CurveRangeLocalizeData 
 {
@@ -40,46 +36,27 @@ public:
   
   Standard_EXPORT IntTools_CurveRangeLocalizeData(const Standard_Integer theNbSample, const Standard_Real theMinRange);
   
-    Standard_Integer GetNbSample() const;
-  
-    Standard_Real GetMinRange() const;
-  
+  Standard_Integer GetNbSample() const { return myNbSampleC; }
+
+  Standard_Real GetMinRange() const { return myMinRangeC; }
+
   Standard_EXPORT void AddOutRange (const IntTools_CurveRangeSample& theRange);
-  
+
   Standard_EXPORT void AddBox (const IntTools_CurveRangeSample& theRange, const Bnd_Box& theBox);
-  
+
   Standard_EXPORT Standard_Boolean FindBox (const IntTools_CurveRangeSample& theRange, Bnd_Box& theBox) const;
-  
+
   Standard_EXPORT Standard_Boolean IsRangeOut (const IntTools_CurveRangeSample& theRange) const;
-  
+
   Standard_EXPORT void ListRangeOut (IntTools_ListOfCurveRangeSample& theList) const;
 
-
-
-
-protected:
-
-
-
-
-
 private:
-
-
 
   Standard_Integer myNbSampleC;
   Standard_Real myMinRangeC;
   IntTools_MapOfCurveSample myMapRangeOut;
   IntTools_DataMapOfCurveSampleBox myMapBox;
 
-
 };
-
-
-#include <IntTools_CurveRangeLocalizeData.lxx>
-
-
-
-
 
 #endif // _IntTools_CurveRangeLocalizeData_HeaderFile
